# CRS_agent_benchmark

./: .gitignore  AGENTS.md
modules/crs-agent-upstream/backend/: .env.example  README.md  langgraph.json  pyproject.toml
modules/crs-agent-upstream/backend/app/: __init__.py  main.py
modules/crs-agent-upstream/backend/app/agent/: __init__.py  langgraph_app.py  model_ids.py
modules/crs-agent-upstream/backend/app/api/: admin_auth.py  admin_benchmark.py  admin_config.py  admin_dashboard.py  admin_dimension.py  admin_feedback.py  admin_logs.py  chat.py  circuit_body_search.py  feedback.py  frontend_runtime.py  (+8 more)
modules/crs-agent-upstream/backend/tests/: test_admin_backend.py  test_agent_loop_service.py  test_ask_user_v2_enrichment.py  test_case_context_manager.py  test_case_context_prompt_builder.py  test_case_context_runtime_integration.py  test_chat_api_doc_search_flow.py  test_circuit_body_search.py  test_coding_engine.py  test_doc_search_benchmark_reporting.py  test_doc_search_domain.py  test_doc_search_runtime_service.py  test_doc_search_tooling.py  test_frontend_protocol.py  test_frontend_source_visibility.py  test_ggzj_result_adapter.py  test_image_evidence_service.py  test_image_oss_policy.py  test_intent_router.py  test_legacy_foundation.py  test_legacy_proxy.py  test_loop_guard.py  test_parameter_query_runtime.py  test_parameter_query_service.py  test_phase1_auth_ggzj.py  test_phase2_diagnosis_stream.py  test_redis_backed_stores.py  test_repair_knowledge_service.py  test_repair_rendering.py  test_runtime_selector.py  test_speech_api.py  test_task_log_service.py
(+428 files in other folders)
